fixes skills alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -614,9 +614,21 @@ progress {
 
 .list-inline-item {
   display: inline-block;
+  min-width: 4rem;
+  max-height: 4.4rem;
+  text-align: center;
+  vertical-align: middle;
 }
+
+.list-inline-item:hover {
+  color: #fff;
+  background-color: var(--bs-brand-primary);
+  transition: background-color 0.5s, color 0.5s;
+  border-radius: 0.375rem;
+}
+
 .list-inline-item:not(:last-child) {
-  margin-right: 0.5rem;
+  margin-right: 0rem;
 }
 
 .initialism {
